Adds style to cart page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "font-awesome";
 
 // ==== Base
-@import "base/variables";
+@import "base/utilities";
 @import "base/variables-colors";
 @import "base/base";
 @import "base/typography";
