Adds offer address hint

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -52,6 +52,7 @@ section.offer-info
                 li
                   span.glyphicon.glyphicon-map-marker
                   span = @offer.deliver_coordinator.partial_address
+                  p.hint.text--brown__medium Por motivos de segurança, o número do endereço só será fornecido para os participantes da oferta.
             .offer-info__tax
               h2.title--up.text--green Taxas operacionais
               table.table
