--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -35,4 +35,6 @@ h1 { font-size: 33px; }
 
 .text--brown__medium { color: $brown-medium !important}
 
+.text--brown__light { color: $brown-light !important}
+
 .text--white { color: #fff !important; }
