--- a/app/views/pages/cart.html.slim
+++ b/app/views/pages/cart.html.slim
@@ -15,28 +15,29 @@ section.cart
               tbody
                 - cart_session.cart_list.each do |item|
                   tr
-                    td
+                    td title="#{item.offer.title}"
                       = item.offer.title
                     td
-                      = link_to '-', remove_from_cart_offer_path(item.offer), method: :delete, class: 'btn btn--sm btn--yellow'
+                      = link_to '-', remove_from_cart_offer_path(item.offer), method: :delete, class: 'btn btn--sm btn--yellow', title: 'Remover item'
                       span.cart-quantity = item.quantity
-                      = link_to '+', add_to_cart_offer_path(item.offer), method: :post, class: 'btn btn--sm btn--yellow'
-                    td
+                      = link_to '+', add_to_cart_offer_path(item.offer), method: :post, class: 'btn btn--sm btn--yellow', title: 'Adicionar item'
+                    td title="Valor unitário: #{number_to_currency item.piece_price}"
                       = number_to_currency item.piece_price
-                    td
+                    td title="Valor total: #{number_to_currency item.total_price}"
                       = number_to_currency item.total_price
             .row
               .col-sm-6
-                .pull-left = link_to 'Limpar meu carrinho', clean_cart_path, method: :delete, data: { confirm: 'Tem certeza que deseja fazer isso?' }
+                .pull-left = link_to 'Limpar meu carrinho', clean_cart_path, method: :delete, data: { confirm: 'Tem certeza que deseja fazer isso?' }, title: 'Limpar meu carrinho'
               .col-sm-6
-                h2.pull-right.no-Margin = "Valor Total: #{number_to_currency cart_session.total_value}"
+                h2.pull-right.no-Margin title="Valor Total: #{number_to_currency cart_session.total_value}" = "Valor Total: #{number_to_currency cart_session.total_value}"
             .row
               .col-sm-6.col-sm-offset-6
                 br
-                = link_to 'Concluír Compra', checkout_path, class: 'btn btn--md btn--yellow btn--block'
+                = link_to 'Ir para o Pagamento', checkout_path, class: 'btn btn--md btn--yellow btn--block', title: 'Ir para o Pagamento'
                 br
                 br
-                .pull-right = link_to 'Continuar Comprando', root_path
+                br
+                .pull-right = link_to 'Continuar Comprando', root_path, title: 'Continuar Comprando'
 
   - else
     .container
