Changes success text

--- a/app/views/checkouts/success.html.slim
+++ b/app/views/checkouts/success.html.slim
@@ -3,8 +3,8 @@ section.checkout
     .row
       .col-sm-12.col-md-10.col-centered
         .form.brown-dark
-          h1.title--up.text--yellow.text-center Compra realizada com sucesso!
-          h3.text-center Aqui estão as informações sobre a sua compra:
+          h1.title--up.text--yellow.text-center Pague a sua compra!
+          h3.text-center Você tem até as 23h59min de hoje (#{@purchase.created_at.strftime('%d/%m')}) para pagar.
 
           - if @purchase.payment_method == 'credit_card'
             iframe src="#{@purchase.invoice_url}" width="100%" height="500"
