Adds remove cart item button style

--- a/app/assets/stylesheets/molecules/_table.scss
+++ b/app/assets/stylesheets/molecules/_table.scss
@@ -4,9 +4,26 @@
 	}
 }
 
+td.small {
+  width: 50px !important;
+}
+
 .table-cart {
   &.table-bordered {
     border: 0;
+  }
+
+  .fa {
+    font-size: 21px;
+    display: middle;
+  }
+
+  a {
+    .fa {
+      &:hover {
+        color: $brown-medium;
+      }
+    }
   }
 
   thead {
