--- a/app/assets/stylesheets/organisms/_footer.scss
+++ b/app/assets/stylesheets/organisms/_footer.scss
@@ -11,7 +11,7 @@
     padding: 0;
     li {
       display: inline-block;
-      &:last-child {
+      &:not(:first-child) {
         margin-left: 10px;
       }
     }
