Changes og image

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html
     = metamagic
     meta[charset="utf-8"]
     meta[property="og:locale" content="pt_BR"]
-    meta[property="og:site_name" content="triboviva.com.br"]
+    meta[property="og:site_name" content="Tribo Viva"]
     /[if lt IE 9]
       meta[content="text/html; charset=utf-8" http-equiv="Content-Type"]
       = javascript_include_tag "//html5shiv.googlecode.com/svn/trunk/html5.js"
